delta-harness: remove stale local prototype; narrow retry; withTable loan pattern
Review follow-ups:
- Delete the superseded local-catalog prototype (harness/Main.scala + pom.xml
  + run.sh + VERIFIED-RUN.txt). It still carried the old Either/Left-Right +
  Errored/InfraError model and a State type we already collapsed; every review
  comment on it is resolved in the live OpenHouseMatrix.scala.
- Narrow the transient classifier: retry ONLY recognized-transient errors
  (SocketTimeout / Connect / connection-reset). A bare IOException
  (FileNotFound, permission, corrupt-file EOF) is now terminal and surfaces,
  rather than being retried away — do not assume an error is benign.
- Scope table lifetime with a withPreparedTable / withFreshTable loan pattern
  (deferred prepare thunk + always-drop) instead of inline try/finally.
- Rewrite the stale README to the current (state x operation) model.

Still 109 passed, 0 skipped, 0 failed across all three formats.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TfKpxRHPr8PXEnuYyzsn6C